fixed contact form icons on mobile and header width and height

--- a/style/contact-form.css
+++ b/style/contact-form.css
@@ -281,7 +281,7 @@
     #form_child_right {
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;   
+        justify-content: center;
         font-size: var(--font-size-s);
         height: auto;
         
@@ -297,7 +297,7 @@
 
         display: flex;
         align-self: center;
-        padding-left: 0%;
+        padding-left: 30px;
         
 
     }
@@ -305,19 +305,19 @@
     #form_child_right p:nth-of-type(2) {
 
         align-self: center;
-        padding-left: 0%;
+        padding-left: 30px;
     }  
     #form_child_right i {
         position: relative;
-        top: 20px;
-        left: 18%;
+        top: 25px;
+        left: 40px;
         max-width: 50px;
 
     }
     #form_child_right i:nth-of-type(2) {
         position: relative;
         top: 20px;
-        left: 18%;
+        left: 40px;
         max-width: 50px;
         
 
